--- a/webserver/public/app/puntos/views/form.html
+++ b/webserver/public/app/puntos/views/form.html
@@ -79,17 +79,40 @@
             </div>
         </div>
 
+        <!-- Videos -->
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Videos</label>
+            <div class="col-sm-10">
+                <h4>Información</h4>
+                <p>El formato del video debe ser mp4.</p>
+                <label class="btn btn-primary">
+                    <input type="file" custom-on-change="uploadVideoClick" style="display:none;" multiple="multiple" accept="video/mp4">
+                    Subir video
+                </label>
+
+                <div class="previewDeVideos">
+                    <div class="videoPreview" ng-repeat="(id,puntoVideo) in punto.videos">
+                        <video controls>
+                            <source ng-src="{{puntoVideo.vidSrc}}" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <button type='button' class="btn btn-default btn-block" ng-click="deleteVideo(id,puntoVideo)">Borrar video</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Error header -->
-        <div id="error-en-formulario">
+        <div id="error-en-formulario-punto">
         </div>
 
 
-        <div class="form-group row">
+        <div class="form-group row" ng-show="false">
             <button type="submit" class="btn btn-primary center-block">Guardar</button>
         </div>
     </form>
 </div>
-<div class="modal-footer" ng-show="false">
-    <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+<div class="modal-footer">
+    <button class="btn btn-primary" type="button" ng-click="submitPunto()">Guardar</button>
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
 </div>
