#216 Ya estaría el grafico para el reporte1. Faltaria integrar con backend cuando esté ok.

--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -189,3 +189,21 @@ code {
 }
 
 .link { background:none;border:none; }
+
+#reporte1 svg {
+    font: 10px sans-serif;
+}
+#reporte1 .bar rect {
+    fill: steelblue;
+    shape-rendering: crispEdges;
+}
+#reporte1 .axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+#reporte1 .line {
+    fill: none;
+    stroke: purple;
+    stroke-width: 1.5px;
+}
