--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -39,6 +39,10 @@
     <script type="text/javascript" src="app/puntos/module.js"></script>
     <script type="text/javascript" src="app/puntos/controllers/ModalPuntos.js"></script>
     <script type="text/javascript" src="app/puntos/services/PuntosService.js"></script>
+
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="app/reportes/module.js"></script>
+    <script type="text/javascript" src="app/reportes/report1.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
