--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -43,6 +43,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script type="text/javascript" src="app/reportes/module.js"></script>
     <script type="text/javascript" src="app/reportes/report1.js"></script>
+    <script type="text/javascript" src="app/reportes/report3.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
