--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -208,6 +208,24 @@ code {
     stroke-width: 1.5px;
 }
 
+#reporte2 svg {
+    font: 10px sans-serif;
+}
+#reporte2 .bar rect {
+    fill: steelblue;
+    shape-rendering: crispEdges;
+}
+#reporte2 .axis path, .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+#reporte2 .line {
+    fill: none;
+    stroke: purple;
+    stroke-width: 1.5px;
+}
+
 #reporte3 .arc text {
     font: 10px sans-serif;
     text-anchor: middle;
